--- a/index.html
+++ b/index.html
@@ -70,35 +70,40 @@
       <div class="services">
         <div class="service">
           <!-- <h3>Frontend</h3> -->
-          <ul class="services__list">
+          <!-- <ul class="services__list">
             <li>React</li>
             <li>Redux</li>
             <li>React Native</li>
             <li>HTML</li>
             <li>CSS</li>
-          </ul>
+          </ul> -->
+          <p>React, Redux, React Native, HTML, CSS</p>
         </div>
         <!-- / service -->
 
         <div class="service">
           <!-- <h3>Backend</h3> -->
-          <ul class="services__list">
+          <!-- <ul class="services__list">
             <li>Node.js</li>
             <li>Express</li>
             <li>Sequelize</li>
             <li>Postgres</li>
             <li>Firestore</li>
-          </ul>
+          </ul> -->
+                    <p>Node.js, Express, Sequelize, Postgres, Firestore</p>
+
         </div>
         <!-- / service -->
 
         <div class="service">
           <!-- <h3>Other</h3> -->
-          <ul class="services__list">
+          <!-- <ul class="services__list">
             <li>ES6</li>
             <li>PHP</li>
             <li>Wordpress</li>
-          </ul>
+          </ul> -->
+                    <p>ES6, PHP, Wordpress</p>
+
         </div>
         <!-- / service -->
       </div>
@@ -140,11 +145,11 @@
 
       <div class="portfolio">
                 <!-- Portfolio MH -->
-                <a href="portfolio-mh.html" class="portfolio__item">
+                <a href="portfolio-mh" class="portfolio__item">
                     <img src="images/mh.jpg" alt="receipt" class="portfolio__img" />
                 </a>
         <!-- Portfolio Splice -->
-        <a href="portfolio-splice.html" class="portfolio__item">
+        <a href="portfolio-splice" class="portfolio__item">
           <img
             src="images/receipt.jpg"
             alt="calculator"
@@ -152,7 +157,7 @@
           />
         </a>
         <!-- Portfolio Ecommece-->
-        <a href="portfolio-ecommerce.html" class="portfolio__item">
+        <a href="portfolio-ecommerce" class="portfolio__item">
           <img
             src="images/ecommerce.jpg"
             alt="receipt"
@@ -160,7 +165,7 @@
           />
         </a>
             <!-- Portfolio Matthew -->
-            <a href="portfolio-matthew.html" class="portfolio__item">
+            <a href="portfolio-matthew" class="portfolio__item">
                 <img src="images/calculator-02.jpg" alt="e-commerce" class="portfolio__img" />
             </a>
       </div>
