--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 
       <div class="portfolio">
                 <!-- Portfolio MH -->
-                <a href="portfolio-mh" class="portfolio__item">
+                <a href="portfolio-mh.html" class="portfolio__item">
                     <img src="images/mh.jpg" alt="receipt" class="portfolio__img" />
                 </a>
         <!-- Portfolio Splice -->
-        <a href="portfolio-splice" class="portfolio__item">
+        <a href="portfolio-splice.html" class="portfolio__item">
           <img
             src="images/receipt.jpg"
             alt="calculator"
@@ -157,7 +157,7 @@
           />
         </a>
         <!-- Portfolio Ecommece-->
-        <a href="portfolio-ecommerce" class="portfolio__item">
+        <a href="portfolio-ecommerce.html" class="portfolio__item">
           <img
             src="images/ecommerce.jpg"
             alt="receipt"
@@ -165,7 +165,7 @@
           />
         </a>
             <!-- Portfolio Matthew -->
-            <a href="portfolio-matthew" class="portfolio__item">
+            <a href="portfolio-matthew.html" class="portfolio__item">
                 <img src="images/calculator-02.jpg" alt="e-commerce" class="portfolio__img" />
             </a>
       </div>
