added JOP section & fixed nav outline

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
       </p>
 
       <div class="portfolio">
+        <!-- Portfolio JOP -->
+        <a href="portfolio-jop.html" class="portfolio__item">
+          <img src="images/penny.jpg" alt="receipt" class="portfolio__img" />
+        </a>
                 <!-- Portfolio MH -->
                 <a href="portfolio-mh.html" class="portfolio__item">
                     <img src="images/mh.jpg" alt="receipt" class="portfolio__img" />
