--- a/portfolio-mh.html
+++ b/portfolio-mh.html
@@ -57,7 +57,7 @@
         <strong>mental health polk</strong>
       </h1>
     <p class="section__subtitle section__subtitle--intro">
-        pro-bono consulting
+        software engineer (pro-bono)
       </p> 
       <img src="images/mh.jpg" alt="calc" class="intro__img" />
     </section>
@@ -73,7 +73,7 @@
       <p>
         Updating codebase, database, and adding features as need to improve user experience. 
       </p>
-      <p>Ongoing - </p>
+      <p>05/2020 - Present</p>
       </div>
       <div class='tech-stack-div'>
       <p><strong>Tech Stack: </strong>PHP, ES6, HTML, CSS, Wordpress</p>
