--- a/index.html
+++ b/index.html
@@ -148,10 +148,12 @@
         <a href="portfolio-jop.html" class="portfolio__item">
           <img src="images/penny.jpg" alt="receipt" class="portfolio__img" />
         </a>
+      
                 <!-- Portfolio MH -->
                 <a href="portfolio-mh.html" class="portfolio__item">
                     <img src="images/mh.jpg" alt="receipt" class="portfolio__img" />
                 </a>
+              
         <!-- Portfolio Splice -->
         <a href="portfolio-splice.html" class="portfolio__item">
           <img
@@ -160,6 +162,7 @@
             class="portfolio__img"
           />
         </a>
+
         <!-- Portfolio Ecommece-->
         <a href="portfolio-ecommerce.html" class="portfolio__item">
           <img
@@ -169,7 +172,7 @@
           />
         </a>
             <!-- Portfolio Matthew -->
-            <a href="portfolio-matthew.html" class="portfolio__item">
+            <a href="portfolio-matthew" class="portfolio__item">
                 <img src="images/calculator-02.jpg" alt="e-commerce" class="portfolio__img" />
             </a>
       </div>
