nginx config remove extensions

--- a/portfolio-jop.html
+++ b/portfolio-jop.html
@@ -65,16 +65,13 @@
                     Just One Penny is a non-profit working to promote charity donations by making it easier and more accessible.
                 </p>
                 <p>
-                    alksdfj;alsdkjf;alskjdf;askdfj
+                    Working with initial team of engineers to build out JOP donation platform, with primary focus on front-end development.
                 </p>
-                <p>
-                   aldsjfalskdjfa;sdfkj
-                </p>
-                <p>08-2020 - Present</p>
-            </div>
-            <div class='tech-stack-div'>
-                <p><strong>Tech Stack: </strong>React Native, Expo, Cloud Firestore, Express, Taggun.io, Native Base</p>
-            </div>
+                <p>08/2020 - Present</p>
+                </div>
+                <div class='tech-stack-div'>
+                    <p><strong>Tech Stack: </strong>MongoDB, ES6, React, Redux, Express, HTML, CSS</p>
+                </div>
             <a class="social-list__link" href="https://github.com/splice-capstone/splice"><i
                     class="fab fa-github"></i></a>
         </div>
