--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
 
       <div class="portfolio">
         <!-- Portfolio JOP -->
-        <a href="portfolio-jop.html" class="portfolio__item">
+        <a href="portfolio-jop" class="portfolio__item">
           <img src="images/penny.jpg" alt="receipt" class="portfolio__img" />
         </a>
       
                 <!-- Portfolio MH -->
-                <a href="portfolio-mh.html" class="portfolio__item">
+                <a href="portfolio-mh" class="portfolio__item">
                     <img src="images/mh.jpg" alt="receipt" class="portfolio__img" />
                 </a>
               
         <!-- Portfolio Splice -->
-        <a href="portfolio-splice.html" class="portfolio__item">
+        <a href="portfolio-splice" class="portfolio__item">
           <img
             src="images/receipt.jpg"
             alt="calculator"
@@ -164,7 +164,7 @@
         </a>
 
         <!-- Portfolio Ecommece-->
-        <a href="portfolio-ecommerce.html" class="portfolio__item">
+        <a href="portfolio-ecommerce" class="portfolio__item">
           <img
             src="images/ecommerce.jpg"
             alt="receipt"
