--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vera Krutsina Portfolio</title>
+    <title>Vera Krutsina</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
@@ -21,8 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="css/style.css" />
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -77,7 +76,7 @@
             <li>HTML</li>
             <li>CSS</li>
           </ul> -->
-          <p>React, Redux, React Native, HTML, CSS</p>
+          <p>React, Redux, Redux Saga, React Native, HTML, CSS</p>
         </div>
         <!-- / service -->
 
@@ -102,7 +101,7 @@
             <li>PHP</li>
             <li>Wordpress</li>
           </ul> -->
-                    <p>ES6, PHP, Wordpress</p>
+                    <p>ES6, Python, Typescript</p>
 
         </div>
         <!-- / service -->
@@ -122,14 +121,15 @@
 
       <div class="about-me__body">
         <p>
-            Hi, I’m Vera! I am a full-stack software engineer that is passionate about using
-            tech to augment and ease the day to day experience. I love
-            collaborating, learning from others, and working in teams that are
-            passionate and enthusiastic.
+            Hi, I’m Vera! I'm a software engineer that is passionate about using
+            technology to augment and ease the day-to-day experience. I love working with companies 
+            to design and build from the ground up, especially those using technology to implement 
+            a positive change in the world. I value collaboration, learning from peers, and working in 
+            teams that are passionate and enthusiastic.
         </p>
         <p>
-        When I’m not developing, you can find me reading, cooking,
-        traveling, or playing with my dog Mimo. I am always happy to
+        When I’m not developing, you can find me cooking,
+        traveling, reading, hiking, or playing with my dog Mimo. I am always happy to
         connect and chat!
         </p>
       </div>
@@ -140,19 +140,22 @@
     <section class="my-work" id="work">
       <h2 class="section__title section__title--work">my work</h2>
       <p class="section__subtitle section__subtitle--work">
-        a selection of my work
+        a selection of my work & projects 
       </p>
-
       <div class="portfolio">
-        <!-- Portfolio JOP -->
+        <!-- Portfolio Allihopp -->
         <a href="portfolio-jop" class="portfolio__item">
           <img src="images/penny.jpg" alt="receipt" class="portfolio__img" />
         </a>
+        <!-- Portfolio JOP -->
+        <a href="portfolio-jop" class="portfolio__item">
+          <img src="images/qt=q_95.webp" alt="penny" class="portfolio__img portfolio__img__jop" />
+        </a>
       
-                <!-- Portfolio MH -->
-                <a href="portfolio-mh" class="portfolio__item">
-                    <img src="images/mh.jpg" alt="receipt" class="portfolio__img" />
-                </a>
+        <!-- Portfolio MH -->
+        <a href="portfolio-mh" class="portfolio__item">
+          <img src="images/mh.jpg" alt="receipt" class="portfolio__img" />
+        </a>
               
         <!-- Portfolio Splice -->
         <a href="portfolio-splice" class="portfolio__item">
@@ -162,19 +165,6 @@
             class="portfolio__img"
           />
         </a>
-
-        <!-- Portfolio Ecommece-->
-        <a href="portfolio-ecommerce" class="portfolio__item">
-          <img
-            src="images/ecommerce.jpg"
-            alt="receipt"
-            class="portfolio__img"
-          />
-        </a>
-            <!-- Portfolio Matthew -->
-            <a href="portfolio-matthew" class="portfolio__item">
-                <img src="images/calculator-02.jpg" alt="e-commerce" class="portfolio__img" />
-            </a>
       </div>
     </section>
 
