--- a/portfolio-allihopp.html
+++ b/portfolio-allihopp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vera Krutsina Portfolio</title>
+    <title>Vera Krutsina</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
@@ -47,35 +47,32 @@
 
     <section class="intro">
         <h1 class="section__title section__title--intro">
-            <strong>matthew</strong>
+            <strong>Just One Penny</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">
-            speech recognition calculator
+            software engineer (pro-bono)
         </p>
-        <img src="images/calculator-02.jpg" alt="calc" class="intro__img" />
+        <img src="images/penny.jpg" alt="calc" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
-        <!-- <h2 class="section__title section__title--services">
-            about matthew
-        </h2> -->
         <div class='portfolio-item--description'>
             <div class='portfolio-description'>
                 <p>
-                    Matthew is a speech recognition calculator able to perform simple mathematical operations.
+                    Allihopp is a German based company working to create a personalized and innovative mental health platform to help cope 
+                    with and allevieate difficulties associated with COVID-19. We are a small, passionate, group dedicated to helping individuals 
+                    deal with the past, current, and future effects of COVID-19.  
                 </p>
                 <p>
-                    Matthew was built with speech recognition capability in multiple languages. 
+                    Working with one other software engineer to build a performant, scalable, and seamless front-end. Collaborating with an international team to 
+                    create an intuitive, playful, and effective mental health tool and resource.  
                 </p>
-                <p>
-                    Behind the scenes is a custom complier, built in ES6, to take in translated speech and return an output.
-                </p>
-                <p>08/2019</p>
+                <p>12/2020 - Present</p>
             </div>
             <div class='tech-stack-div'>
-                <p><strong>Tech Stack: </strong>ES6, Webkit, Translator.js, HTML, CSS</p>
+                <p><strong>Tech Stack: </strong>Python, AWS, Docker, TypeScript, Javascript, React, Redux, HTML, CSS</p>
             </div>
-            <a class="social-list__link" href="https://github.com/vkrutsina/stackspeech"><i
+            <a class="social-list__link" href="https://github.com/splice-capstone/splice"><i
                     class="fab fa-github"></i></a>
         </div>
     </div>
