--- a/portfolio-jop.html
+++ b/portfolio-jop.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vera Krutsina Portfolio</title>
+    <title>Vera Krutsina</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
@@ -56,9 +56,6 @@
     </section>
 
     <div class="portfolio-item-individual">
-        <!-- <h2 class="section__title section__title--services">
-            about splice
-        </h2> -->
         <div class='portfolio-item--description'>
             <div class='portfolio-description'>
                 <p>
