updated projects and my work section

--- a/portfolio-allihopp.html
+++ b/portfolio-allihopp.html
@@ -47,12 +47,12 @@
 
     <section class="intro">
         <h1 class="section__title section__title--intro">
-            <strong>Just One Penny</strong>
+            <strong>Allihopp</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">
-            software engineer (pro-bono)
+            font-end software engineer
         </p>
-        <img src="images/penny.jpg" alt="calc" class="intro__img" />
+        <img src="images/Allihopp.jpg" alt="calc" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -72,8 +72,6 @@
             <div class='tech-stack-div'>
                 <p><strong>Tech Stack: </strong>Python, AWS, Docker, TypeScript, Javascript, React, Redux, HTML, CSS</p>
             </div>
-            <a class="social-list__link" href="https://github.com/splice-capstone/splice"><i
-                    class="fab fa-github"></i></a>
         </div>
     </div>
 
