--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         hi, I'm <strong>vera krutsina</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        software developer
+        software engineer
       </p>
       <img src="images/me.jpg" alt="a picture of me" class="intro__img" />
     </section>
@@ -68,47 +68,38 @@
       </h2>
       <div class="services">
         <div class="service">
-          <!-- <h3>Frontend</h3> -->
-          <!-- <ul class="services__list">
+          <ul class='services__list' >
             <li>React</li>
             <li>Redux</li>
+            <li>Redux Saga</li>
             <li>React Native</li>
             <li>HTML</li>
             <li>CSS</li>
-          </ul> -->
-          <p>React, Redux, Redux Saga, React Native, HTML, CSS</p>
+          </ul>
         </div>
-        <!-- / service -->
 
         <div class="service">
-          <!-- <h3>Backend</h3> -->
-          <!-- <ul class="services__list">
+          <ul class='services__list'>
             <li>Node.js</li>
             <li>Express</li>
             <li>Sequelize</li>
             <li>Postgres</li>
             <li>Firestore</li>
-          </ul> -->
-                    <p>Node.js, Express, Sequelize, Postgres, Firestore</p>
+            <li>AWS</li>
+          </ul>
 
         </div>
-        <!-- / service -->
 
         <div class="service">
-          <!-- <h3>Other</h3> -->
-          <!-- <ul class="services__list">
-            <li>ES6</li>
-            <li>PHP</li>
+          <ul class='services__list'>
+            <li>Javascript</li>
+            <li>Typescript</li>
+            <li>Python</li>
             <li>Wordpress</li>
-          </ul> -->
-                    <p>ES6, Python, Typescript</p>
+          </ul>
 
         </div>
-        <!-- / service -->
       </div>
-      <!-- / services -->
-
-      <!-- <a href="#work" class="btn">My Work</a> -->
     </section>
 
     <!-- About Me-->
@@ -122,14 +113,14 @@
       <div class="about-me__body">
         <p>
             Hi, I’m Vera! I'm a software engineer that is passionate about using
-            technology to augment and ease the day-to-day experience. I love working with companies 
+            technology to augment the day-to-day experience. I love working with companies 
             to design and build from the ground up, especially those using technology to implement 
             a positive change in the world. I value collaboration, learning from peers, and working in 
             teams that are passionate and enthusiastic.
         </p>
         <p>
-        When I’m not developing, you can find me cooking,
-        traveling, reading, hiking, or playing with my dog Mimo. I am always happy to
+        When I’m not developing, I am probably cooking,
+        traveling, reading, hiking, or playing with my dog Mimo. I'm always happy to
         connect and chat!
         </p>
       </div>
@@ -138,17 +129,14 @@
 
     <!--My Work-->
     <section class="my-work" id="work">
-      <h2 class="section__title section__title--work">my work</h2>
-      <p class="section__subtitle section__subtitle--work">
-        a selection of my work & projects 
-      </p>
+      <h2 class="section__title section__title--work">some of my work</h2>
       <div class="portfolio">
         <!-- Portfolio Allihopp -->
-        <a href="portfolio-jop" class="portfolio__item">
-          <img src="images/penny.jpg" alt="receipt" class="portfolio__img" />
+        <a href="portfolio-allihopp" class="portfolio__item">
+          <img src="images/Allihopp.jpg" alt="receipt" class="portfolio__img" />
         </a>
         <!-- Portfolio JOP -->
-        <a href="portfolio-jop" class="portfolio__item">
+        <a href="portfolio-jop" class="portfolio__item portfolio__item-jop">
           <img src="images/qt=q_95.webp" alt="penny" class="portfolio__img portfolio__img__jop" />
         </a>
       
